# agentic-control-plane

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  package-lock.json  package.json
agents/: README.md
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: auth.py  cli.py  config.py  database.py  main.py  worker.py
apps/api/app/features/repos/: controller.py  models.py  repository.py
apps/api/app/features/runs/: controller.py  models.py  repository.py
apps/api/app/services/: executor.py  runs_service.py  state_machine.py
apps/api/schema/: 001_init.sql  002_closing_state.sql  003_run_mode.sql  README.md
apps/api/tests/: README.md  conftest.py
apps/api/tests/features/repos/: test_register_repo.py
apps/api/tests/features/runs/: test_dispatch.py  test_run_lifecycle.py  test_verdict.py
apps/mobile/: App.tsx  README.md  app.json  package.json
apps/mobile/src/api/: client.ts  config.ts  queryClient.ts
apps/mobile/src/navigation/: index.tsx
apps/web/: README.md  index.html  package.json  vite.config.ts
apps/web/src/: App.tsx
apps/web/src/api/: config.ts  hooks.ts  http.ts
apps/web/src/features/projects/: ProjectView.tsx  Projects.tsx
apps/web/src/features/runs/: DiffView.tsx  Inbox.tsx  RunDetail.tsx  StateBadge.tsx
instructions/: coding-standards.md  testing-instructions.md
